# agora

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  USAGE.md  agora  agora_telegram.py  config.py  install.sh  main.py  pyproject.toml  start.sh
agents/: __init__.py  router.py  runner.py
bot/: __init__.py  callbacks.py  handlers.py
discussion/: __init__.py  debate.py  debate_prompts.py  debate_state.py  roundtable.py  state.py  utils.py
session/: __init__.py  manager.py
utils/: __init__.py  file_writer.py  helpers.py  markdown.py  project.py  telegram.py
